--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Neo Sans Arabic";
+  src: url("assets/fonts/NeoSansArabic.ttf") format("truetype"),
+    url("assets/fonts/NeoSansArabicBlack.ttf") format("truetype"),
+    url("assets/fonts/NeoSansArabicUltra.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+html,
+body {
+  background-color: #f8f8f8;
+  height: 100%;
+  width: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Neo Sans Arabic", sans-serif;
+}
+
+button:hover {
+  background-color: #f0f0f0;
+  transition: background-color 0.3s ease;
+}
+
+[dir="rtl"] {
+  direction: rtl;
+}
+[dir="ltr"] {
+  direction: ltr;
+}
